tests/NormalTests/paczka1/small_fuzzy/83891583.err
Error in line 8: zwOmOl A7' '9,8
Error in line 10: siwOQCVks A341 1,60
Error in line 5: siwOQCVks A341 3,4
Error in line 11: siwOQCVks A169 68,2
Error in line 7: zwOmOl S305 95,6
